feat: mark up from ME

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <title>Carrot Game</title>
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
+  <script src="https://kit.fontawesome.com/edeb0c9aeb.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <section class="game">
-    
-
-
+    <div class="controller">
+      <button><i class="fa-solid fa-play"></i></button>
+      <div class="timer">00:00</div>
+      <div class="counter">10</div>
+    </div>
+    <div class="target_box">
+      <img src="./img/bug.png" alt="ant">
+      <img src="./img/carrot.png" alt="carrot">
+    </div>
   </section>
 </body>
 </html>
