--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 </head>
 <body>
   <section class="game">
-    <div class="controller">
+    <header class="game__header">
       <button><i class="fa-solid fa-play"></i></button>
-      <div class="timer">00:00</div>
-      <div class="counter">10</div>
-    </div>
-    <div class="target_box">
-      <img src="./img/bug.png" alt="ant">
-      <img src="./img/carrot.png" alt="carrot">
-    </div>
+      <div class="game__timer">00:00</div>
+      <div class="game__score">10</div>
+    </header>
+    <section class="game__field">
+<!--      <img src="./img/bug.png" alt="ant">-->
+<!--      <img src="./img/carrot.png" alt="carrot">-->
+    </section>
+  </section>
+
+  <section class="pop-up pop-up-hidden">
+    <button>
+      <i class="fa-solid fa-rotate-right"></i>
+    </button>
+    <div class="pop-up__message">Hello</div>
   </section>
 </body>
 </html>
