feat/mark up : HTML & CSS 작성 (#1)
* feat: mark up from ME

* feat: styling from me

* fix: mark up and styling from Elie

--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
   <title>Carrot Game</title>
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
+  <script src="https://kit.fontawesome.com/edeb0c9aeb.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <section class="game">
-    
+    <header class="game__header">
+      <button><i class="fa-solid fa-play"></i></button>
+      <div class="game__timer">00:00</div>
+      <div class="game__score">10</div>
+    </header>
+    <section class="game__field">
+<!--      <img src="./img/bug.png" alt="ant">-->
+<!--      <img src="./img/carrot.png" alt="carrot">-->
+    </section>
+  </section>
 
-
+  <section class="pop-up pop-up-hidden">
+    <button>
+      <i class="fa-solid fa-rotate-right"></i>
+    </button>
+    <div class="pop-up__message">Hello</div>
   </section>
 </body>
 </html>
