feat: create bug and carrot

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="game__score">10</div>
     </header>
     <section class="game__field">
-<!--      <img src="./img/bug.png" alt="ant">-->
-<!--      <img src="./img/carrot.png" alt="carrot">-->
+<!--      <img class="game__bug" src="./img/bug.png" alt="ant">-->
+<!--      <img class="game__carrot" src="./img/carrot.png" alt="carrot">-->
     </section>
   </section>
 
